# bodecloud-infra

./: .cursorignore  .dockerignore  .env  .env.bak  .env.cleaned  .env.example  .env.full  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.dns-manager  Dockerfile.warp  LLM_FALLBACKS_CI_CD_SUMMARY.md  README.md  README_warp_routing.md  RESOURCE_LIMITS.md  REVERSE_PROXY_TESTS.md  SELF_HOSTED_MEDIA_STACK.md  STRATEGY.md  all_mcp_servers.json  alt_design.md  docker-compose.aio.yml  docker-compose.authelia.yml  docker-compose.central.yml  docker-compose.consul-client.yml  docker-compose.consul-client.yml.bak  docker-compose.core.yml  docker-compose.dl_indexers.yml  docker-compose.example-service.yml  docker-compose.infrastructure.yml  docker-compose.large.main.yml  docker-compose.llm.yml  docker-compose.minimal.yml  docker-compose.new.main.yml  docker-compose.notify.yml  docker-compose.ollama.yml  docker-compose.parsed.yml  docker-compose.plex_debrid.yml  docker-compose.portainer.yml  (+22 more)
.github/: copilot-instructions.md
.taskmaster/: state.json
arbitrary-scripts/: benchmark_storage.sh  create_tinyauth_user.sh  entrypoint.sh  install-rclone.sh  symlink.sh  various_pvt_logins.sh
certs/: acme copy.json  acme-cloudflare_zerossl.json  acme-duckdns.json  acme.json  acme_athena_duckdns_letsencrypt.json  acme_cloudflare_zerossl.json  acme_duckdns.json  acme_duckdns_zerossl.json  cert.pem  fullchain.pem  key.pem  tls-plex.crt  tls-plex.key
compose/: docker-compose-warp.yml  docker-compose.authentik.yml  docker-compose.central-ha.yml  docker-compose.coolify.yml  (+40 more)
(+6502 files in other folders)
