[project]
name = "bolabaden"
version = "0.1.0"
description = "Ultimate self-hosted stack for your home"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdk8s>=2.69.59",
    "constructs>=10.4.2",
    "dagger-io>=0.17.2",
    "imports>=0.1.4",
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.uv.workspace]
members = ["src/cdk8s_app"]
